# RecipesApp

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
recipes/: models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/templates/recipes/: about.html  base.html  home.html  recipe_detail.html  recipe_form.html  recipes_confirm_delete.html
users/: views.py
users/templates/users/: login.html  logout.html  profile.html  register.html
