[tool.poetry]
name = "recipesapp"
version = "0.1.0"
description = "pet project"
authors = ["melad <meladzeruslan164@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.0"
django-crispy-forms = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
